--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@
 
 docker-build-app:
   # Use the official docker image.
-  image: docker:cli
+  image: docker:latest
   stage: build
   services:
     - docker:dind
