--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ docker-build-app:
     # the daemon started inside of the service. The daemon is available
     # with a network connection instead of the default
     # /var/run/docker.sock socket.
-    DOCKER_HOST: tcp://docker:2376
+    DOCKER_HOST: tcp://localhost:2376
 
   before_script:
     - docker info
