--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,16 @@
-find-docker-port:
-  image: alpine
-  services:
-    - docker:dind
+docker-build-app:
+  # Use the official docker image.
+  image: docker:latest
+  stage: build
+  variables:
+  before_script:
+    - docker info
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - apk add nmap
-    - nmap -sT -p- docker
-
+    - |
+      if [[ "$CI_COMMIT_BRANCH" == "docker" ]]; then
+        echo "Running on branch 'docker': tag = 'app'"
+        cd spring/
+        docker build --pull -t "$CI_REGISTRY_IMAGE:app" .
+        docker push "$CI_REGISTRY_IMAGE:app"
+      fi
