--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${DB_URL}/${DB_DATABASE}?autoReconnect=true
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_DATABASE}?autoReconnect=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# HikariCP will attempt to obtain and validate a db connection. instead of failing right away
-spring.datasource.hikari.initializationFailTimeout = 0
-
+# This prevents the spring boot app from crashing when a db connection is not made
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.continueOnError=true
