--- a/k8s/react/react-deployment.yaml
+++ b/k8s/react/react-deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: react-deployment
+  labels:
+    app: react
 spec:
   replicas: 2
   selector:
@@ -14,7 +16,13 @@ spec:
     spec:
       containers:
       - name: react
-        image: amerch/springtemplate:react
+        image: registry.socs.uoguelph.ca/amerch04/springtemplate:react
+        resources:
+          limits:
+            memory: "500Mi"
+            cpu: "500m"
         env:
           - name: BACKEND_PROXY
             value: http://spring-service:8080
+      imagePullSecrets:
+      - name : regcred
