Updated swagger ui path

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -17,7 +17,7 @@ spec:
             port: 
               number: 3000
       - pathType: Prefix
-        path: /api
+        path: /spring
         backend:
           service:
             name: spring-service
