--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Swagger
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.path=/docs
+
 # This prevents the spring boot app from crashing when a db connection is not made
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.generate-ddl=false
