Added deploy stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
   - build-spring
   - build-mysql
   - build-react
+  - deploy
 
 build-spring:
   stage: build-spring
@@ -39,3 +40,11 @@ build-react:
   only:
     changes:
       - react/*
+
+deploy:
+  image:
+    name: bitnami/kubectl:latest
+    entrypoint: ['']
+  script:
+    - kubectl config get-contexts
+    - kubectl get pods
