--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: gitlab-agent-tagent
+  namespace: gitlab-agent-a
 spec:
   selector:
     matchLabels:
