--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -1,20 +1,19 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: mysql-service
-  namespace: gitlab-agent-local
+  name: nginx-deployment
 spec:
   selector:
-    app: mysql
-  ports:
-  - port: 3306
-    targetPort: 3306
----
-apiVersion: v1
-data:
-  .dockerconfigjson: eyJhdXRocyI6eyJyZWdpc3RyeS5zb2NzLnVvZ3VlbHBoLmNhIjp7InVzZXJuYW1lIjoiYW1lcmNoMDQiLCJwYXNzd29yZCI6ImdscGF0LVh6SFB5RmplekRUbmpidkNoOUN4IiwiYXV0aCI6IllXMWxjbU5vTURRNloyeHdZWFF0V0hwSVVIbEdhbVY2UkZSdWFtSjJRMmc1UTNnPSJ9fX0=
-kind: Secret
-metadata:
-  name: regcred
-  namespace: gitlab-agent-local
-type: kubernetes.io/dockerconfigjson
+    matchLabels:
+      app: nginx
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
