--- a/k8s/react/react-deployment.yaml
+++ b/k8s/react/react-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: react-deployment
-  namespace: gitlab-agent-a
+  namespace: gitlab-agent-tagent
   labels:
     app: react
 spec:
