--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -24,6 +24,7 @@ spec:
             name: spring-service
             port: 
               number: 8080
+  ingressClassName: nginx
 ---
 apiVersion: v1
 kind: Service
