--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -8,14 +8,7 @@ spec:
   - host: amerch04.socs.uoguelph.ca
     http:
       paths:
-      - path: /console
-        pathType: Prefix
-        backend:
-          service:
-            name: react-service
-            port: 
-              number: 3000
-      - path: /api
+      - path: /
         pathType: Prefix
         backend:
           service:
