--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -15,6 +15,13 @@ spec:
             name: react-service
             port: 
               number: 3000
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: spring-service
+            port: 
+              number: 8080
       
 ---
 apiVersion: v1
