Updated sprinng app endpoints

--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Swagger
 springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.swagger-ui.path=/docs
+springdoc.swagger-ui.path=/api/docs
 
 # This prevents the spring boot app from crashing when a db connection is not made
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
