--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -8,6 +8,13 @@ spec:
   - host: amerch04.socs.uoguelph.ca
     http:
       paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: react-service
+            port: 
+              number: 3000
       - path: /api
         pathType: Prefix
         backend:
