--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -3,7 +3,13 @@ kind: Ingress
 metadata:
   name: ingress
   namespace: gitlab-agent-local
+  #cert-manager.io/issuer: "letsencrypt-prod"
 spec:
+  ingressClassName: nginx
+  tls:
+  - hosts:
+    - amerch04.socs.uoguelph.ca
+    secretName: template-tls
   rules:
   - host: amerch04.socs.uoguelph.ca
     http:
@@ -22,7 +28,6 @@ spec:
             name: spring-service
             port: 
               number: 8080
-      
 ---
 apiVersion: v1
 kind: Service
@@ -68,3 +73,43 @@ metadata:
   name: regcred
   namespace: gitlab-agent-local
 type: kubernetes.io/dockerconfigjson
+---
+apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: letsencrypt-prod
+  namespace: gitlab-agent-local
+spec:
+  acme:
+    # The ACME server URL
+    server: https://acme-v02.api.letsencrypt.org/directory
+    # Email address used for ACME registration
+    email: amerch04@uoguelph.ca
+    # Name of a secret used to store the ACME account private key
+    privateKeySecretRef:
+      name: letsencrypt-prod
+    # Enable the HTTP-01 challenge provider
+    solvers:
+      - http01:
+          ingress:
+            ingressClassName: nginx
+---
+apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: letsencrypt-staging
+  namespace: gitlab-agent-local
+spec:
+  acme:
+    # The ACME server URL
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    # Email address used for ACME registration
+    email: amerch04@uoguelph.ca
+    # Name of a secret used to store the ACME account private key
+    privateKeySecretRef:
+      name: letsencrypt-staging
+    # Enable the HTTP-01 challenge provider
+    solvers:
+      - http01:
+          ingress:
+            ingressClassName: nginx
