--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress
   namespace: gitlab-agent-local
-  #cert-manager.io/issuer: "letsencrypt-prod"
+  cert-manager.io/issuer: "letsencrypt-staging"
 spec:
   tls:
   - hosts:
