--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -90,9 +90,7 @@ spec:
       name: letsencrypt-prod
     # Enable the HTTP-01 challenge provider
     solvers:
-      - http01:
-          ingress:
-            ingressClassName: nginx
+      - http01: {}
 ---
 apiVersion: cert-manager.io/v1
 kind: Issuer
@@ -110,6 +108,4 @@ spec:
       name: letsencrypt-staging
     # Enable the HTTP-01 challenge provider
     solvers:
-      - http01:
-          ingress:
-            ingressClassName: nginx
+      - http01: {}
