--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress
   namespace: gitlab-agent-local
   annotations:
-    cert-manager.io/issuer: letsencrypt-staging
+    cert-manager.io/issuer: letsencrypt-prod
 spec:
   tls:
   - hosts:
@@ -90,9 +90,9 @@ spec:
       name: letsencrypt-prod
     # Enable the HTTP-01 challenge provider
     solvers:
-      - http01:
-          ingress:
-            class: nginx
+    - http01:
+        ingress:
+          class: nginx
 ---
 apiVersion: cert-manager.io/v1
 kind: Issuer
@@ -110,6 +110,6 @@ spec:
       name: letsencrypt-staging
     # Enable the HTTP-01 challenge provider
     solvers:
-      - http01:
-          ingress:
-              class: nginx
+    - http01:
+        ingress:
+            class: nginx
