--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Swagger
 springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.swagger-ui.path=/api
+springdoc.swagger-ui.path=/api/docs.html
 springdoc.api-docs.path=/api/v3/api-docs/swagger-config
 
 # This prevents the spring boot app from crashing when a db connection is not made
