--- a/compose.yml
+++ b/compose.yml
@@ -32,8 +32,12 @@ services:
       - BACKEND_PROXY=http://spring:8080
     networks:
       - spring-react
-    
 
+  blog:
+    build: ./blog
+    ports:
+      - "4000:4000"
+    
 networks:
   spring-mysql:
   spring-react:
