--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -5,5 +5,7 @@ source "https://rubygems.org"
 # gem "rails"
 
 gem "jekyll"
-
+gem "kramdown-parser-gfm"
 gem "no-style-please"
+
+gem "webrick", "~> 1.8"
