--- a/k8s/blog/blog-deployment.yaml
+++ b/k8s/blog/blog-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: blog-deployment
   namespace: gitlab-agent-local
 spec:
-  replica: 1
+  replicas: 1
   selector:
     matchLabels:
       app: blog
