Added new blog + minor code changes

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,5 +1,6 @@
 # Use the mysql image
 FROM mysql
 
-# Copy all the files in this directory to the container
+# Copy all the files in the docker-entrypoint-initdb.d inside the container 
+# which will run automatically when the sql server will start
 COPY ./scripts/setup.sql /docker-entrypoint-initdb.d/
