--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
       - "8080:8080"
     environment:
       # These are used in apllication.property to setup DB connection
-      - DB_HOST=mysql
+      - DB_ADDRESS=jdbc:mysql://mysql:3306
       - DB_DATABASE=template_db
       - DB_USER=root
       - DB_PASSWORD=pwd
@@ -15,8 +15,6 @@ services:
 
   mysql:
     build: ./mysql
-    ports:
-      - "3306:3306"
     environment:
       # Mysql docker image env vars
       - MYSQL_ROOT_PASSWORD=pwd
@@ -29,6 +27,7 @@ services:
     ports:
       - "3000:3000"
     environment:
+      # Tell the react app that our spring server is running here
       - BACKEND_PROXY=http://spring:8080
     networks:
       - spring-react
