--- a/k8s/spring/spring-deployment.yaml
+++ b/k8s/spring/spring-deployment.yaml
@@ -20,8 +20,8 @@ spec:
         image: registry.socs.uoguelph.ca/amerch04/springtemplate/spring:v0.0.0
         imagePullPolicy: Always
         env:
-          - name: DB_HOST
-            value: mysql-service
+          - name: DB_ADDRESS
+            value: mysql://mysql:3306
           - name: DB_DATABASE
             value: template_db
           - name: DB_USER
