--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/${DB_DATABASE}?autoReconnect=true
+spring.datasource.url=${DB_ADDRESS}/${DB_DATABASE}?autoReconnect=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
