--- a/k8s/spring/spring-deployment.yaml
+++ b/k8s/spring/spring-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         imagePullPolicy: Always
         env:
           - name: DB_ADDRESS
-            value: mysql://mysql:3306
+            value: mysql://mysql-service:3306
           - name: DB_DATABASE
             value: template_db
           - name: DB_USER
