--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -28,7 +28,7 @@ spec:
             name: spring-service
             port: 
               number: 8080
-      - path: /blog
+      - path: /blogs
         pathType: Prefix
         backend:
           service:
