--- a/.gitlab/agents/socs/config.yaml
+++ b/.gitlab/agents/socs/config.yaml
@@ -1,5 +1,7 @@
 gitops:
   manifest_projects:
   - id: "amerch04/springtemplate"
+    ref:
+      branch: deploy
     paths:
     - glob: '/**/*manifest.{yaml, yml, json}'
